# SkillLens

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  NOTICE  README.md  bootstrap.sh  index.html  pyproject.toml
assets/: app.js  style.css
data/skill/: academic-paper-review.json  academic-researcher.json  advogado-criminal.json  afrexai-construction-estimator.json  aircraft-maintenance-engineer.json  alfworld-temperature-regulator.json  andrej-karpathy.json  appliance-repairer.json  aquaculture-expert.json  article-writing.json  auto-repair-technician.json  behuman.json  boiler.json  bom-sop-check.json  cargo-loading-safety-and-balance-protocols.json  carpenter.json  carrier-relationship-management.json  ceramic-artist.json  chef.json  clean.json  cognitive-flexibility.json  content-engine.json  crane-operator.json  crosspost.json  customer-support.json  customs-trade-compliance.json  defense-maintenance.json  dock-scheduling-coordinator.json  docx.json  dog-potty-training.json  draft-outreach.json  email-drafter.json  employment-contract-templates.json  endurance.json  energy-procurement.json  escape-from-captivity.json  exercise-form.json  explain-like-socrates.json  family-grocery.json  farm-machinery-operator.json  (+72 more)
demos/: home.html  report.html  standalone.html
docs/: index.html
docs/assets/: style.css
docs/demos/: skills.html
scripts/: sanitize_traces.py
skills_eval/: config.py  readme.md  smoke_codex_generate.py  smoke_codex_run.py  smoke_opencode_generate.py  smoke_opencode_run.py
skills_eval/core/: __init__.py  fs_utils.py  runner.py  (+5 more)
(+130 files in other folders)
